filter todos by using visibility from store

--- a/src/index.css
+++ b/src/index.css
@@ -256,7 +256,7 @@ body {
   color: #af5b5e;
 }
 
-/*.todo-list li .destroy:after {*/
+/*.todo-todoApp li .destroy:after {*/
 /*content: '×';*/
 /*}*/
 
